[tool.poetry]
name = "balance"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest-cov = "^2.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b1"
pylint = "^2.8.2"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
